--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site
 name: "limong"
 description: ""
-logo: "assets/images/logo.png"
-favicon: "assets/images/logo.png"
+logo: "assets/images/logo-blog.png"
+favicon: "assets/images/logo-blog.png"
 baseurl: ""
-avatar: "assets/images/sal.jpg"
+avatar: "assets/images/profile.png"
 disqus: ""
 email: "limong.dev@gmail.com"
 
